2011-08-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Stefan Tomanek:
	patch #7542: add default_bitclock to configuration files
	* config.c: Add the new keyword and its handling.
	* config.h: (Ditto.)
	* config_gram.y: (Ditto.)
	* avrdude.conf.in: (Ditto.)
	* main.c: (Ditto.)
	* lexer.l: (Ditto.)
	* avrdude.1: Document the change.
	* doc/avrdude.texi: (Ditto.)

2011-08-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Brett Hagman:
	patch #7603: wiring - programmer type for Wiring boards
	(based on STK500v2)
	* wiring.c: New file.
	* wiring.h: (Ditto.)
	* Makefile.am: Add new files.
	* stk500v2_private.h: Reorganize so some functions and struct
	pdata are globally known.
	* stk500v2.c: (Ditto.)
	* stk500v2.h: (Ditto.)
	* lexer.l: Add new programmer keywords.
	* config_gram.y: (Ditto.)
	* avrdude.conf.in: Add "wiring" programmer entry.
	* avrdude.1: Document the new programmer.
	* doc/avrdude.texi: (Ditto.)
	* AUTHORS: Add Brett Hagman.

2011-08-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by an anonymous contributor on the mailinglist:
	* avrdude.conf (jtagkey): Add a definition for the Amontec
	JTAGKey

2011-08-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Juergen Weigert:
	bug #22720: avrdude-5.5 ignores buff settings in avrdude.conf
	(Note that the actual bug the subject is about has been fixed
	long ago.)
	* update.c (do_op): fix a diagnostic message
	* pgm.h: add exit_datahigh field
	* par.c: set and act upon the exit_datahigh field
	* avrdude.1: document the new -E options
	* doc/avrdude.texi: (Ditto.)

2011-08-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #33811: Parallel make fails
	* Makefile.am (BUILT_SOURCES): Add this macro.

2011-08-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #33114: Segfault after setting the DWEN fuse with Dragon
	* jtagII.c (jtagmkII_getsync): Instead of exit()ing from
	deep within the tree when detecting the "need debugWIRE"
	situation, properly pass this up as a return code.